Revert of `Convert CompilerOutputPaths to RelPaths`
Reviewed By: lebentle

shipit-source-id: b1d880c1d3f2a1bfa17e74c96808414fa0549d84